[project]
name = "mcp-superset"
version = "0.1.0"
description = "MCP server for Apache Superset: create dashboards, charts, and filters from Cursor"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-superset = "mcp_superset.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_superset"]
